# Kindle-TileWords

./: Makefile  README.md  meson.build
.github/workflows/: main.yml
extension/tilewords/: config.xml  menu.json  tilewords.sh
extension/tilewords/assets/fonts/: README.md
extension/tilewords/assets/icons/: README.md
extension/tilewords/data/: dictionary.txt
scripts/: build-kindlehf.sh  package-kual.sh
src/: kindle_gtk_runtime.h  main.cpp  tilewords.c
stubs/: cairo.h
stubs/gtk/: gtk.h
